Cambios finales para las inscripciones de guardia y turno. Cuando se valida una inscripción de turno, se valida las inscripciones de guardia y crea algunas que no tenga.